--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("font-awesome.min.css");
+@import url("font-gawesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
 
 /*
@@ -1534,7 +1534,7 @@
 			margin-left: 58.33333%;
 		}
 
-		.\-6u\28xsmall\29 {
+		.\-6u\28xsmall\29{
 			margin-left: 50%;
 		}
 
@@ -1568,7 +1568,7 @@
 
 	body, input, select, textarea {
 		color: #888;
-		font-family: "Lato", sans-serif;
+		font-family: "Arial", sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
 		line-height: 1.75em;
@@ -2901,7 +2901,7 @@
 		/* Basic */
 
 			body, input, select, textarea {
-				font-size: 12pt;
+				g-size: 12pt;
 			}
 
 			h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
