--- a/blog/blog.css
+++ b/blog/blog.css
@@ -5,9 +5,8 @@ body {
 }
 
 h1{
-  font-size: 100px;
+  font-size: 80px;
   margin: 0 0 0 0;
-  text-align: center;
 }
 
 h1 > small{
@@ -15,8 +14,7 @@ h1 > small{
 }
 
 h2 {
-  text-align: center;
-  margin: 0 0 50px 0;
+  margin: 20px 0 50px 0;
   font-size: 20px;
 }
 
