--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,7 +1,7 @@
 body {
-  background-color: #eee;
-  margin: 0 30% 0 30%;
-  font-family: Arial;
+  background-color: #ffff;
+  margin: 0 15% 0 15%;
+  font-family: Helvetica;
 }
 
 h1{
@@ -16,6 +16,10 @@ h1 > small{
 h2 {
   margin: 20px 0 50px 0;
   font-size: 20px;
+}
+
+p {
+        line-height: 25px;
 }
 
 .box {
