--- a/blog/blog.css
+++ b/blog/blog.css
@@ -26,9 +26,14 @@ footer {
 }
 
 .left_bar {
-  position: fixed;
+  position: absolute;
   margin: 0 75% 0 0;
   padding: 2% 3% 0 3%;
+}
+
+.balls {
+  position: absolute;
+  margin: 0 25% 0 25%;
 }
 
 h1{
@@ -88,13 +93,9 @@ strong {
 }
 
 .photo {
-  text-align: center;
-}
-
-.photo img {
-  width: 75%;
-  height: 75%;
-  margin: 20px 0px 20px 0px;
+  width: 200px;
+  height: 120px;
+  margin: 20%;
 }
 
   #nav {
@@ -112,5 +113,4 @@ strong {
     line-height: 200px;
     font-size: 20px;
     margin: 0 0.25em 0 0.25em;
-
   }
