--- a/css/blog.css
+++ b/css/blog.css
@@ -8,7 +8,7 @@ body {
 article {
     padding: 0 0 0 0;
     display: block;
-    border-bottom-color: #cfcfcf;
+    border-bottom-color: #edebeb;
     border-bottom-width: 1px;
     border-bottom-style: solid;
 }
@@ -108,7 +108,7 @@ a {
     font-size: 30px !important;
     text-align: center;
     text-decoration: none;
-    color: white;
+    color: #edebeb;
     position: static;
 }
 
@@ -141,18 +141,18 @@ nav a {
     color: #edebeb;
     display: block;
     padding: 15px 0 15px 0;
-    border-top: solid #cfcfcf 1px;
-    border-bottom: solid #cfcfcf 1px;
+    border-top: solid #edebeb 1px;
+    border-bottom: solid #edebeb 1px;
     letter-spacing: 2px;
     font-size: 16px;
 }
 
 nav a:first-child {
-    border-top: solid #cfcfcf 2px;
+    border-top: solid #edebeb 2px;
 }
 
 nav a:last-child {
-    border-bottom: solid #cfcfcf 2px;
+    border-bottom: solid #edebeb 2px;
 }
 
 nav a:hover {}
@@ -166,8 +166,7 @@ hvr {
     overflow: hidden;
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
-    -webkit-transition-property: color, background-color;
-    transition-property: color, background-color;
+    -webkit-transition-property: color, transition-property: color,
 }
 
 .hvr:hover, .hvr:focus, .hvr:active {
