--- a/css/blog.css
+++ b/css/blog.css
@@ -23,7 +23,7 @@ footer {
 main {
     position: static;
     padding: 0 3% 0 3%;
-    margin: 0 25% 0 0;
+    margin: 0 35% 0 10%;
 }
 
 .left_bar {
@@ -42,7 +42,7 @@ main {
 }
 
 h1 {
-    font-size: 55px;
+    font-size: 50px;
     border-bottom: solid 3px;
     position: relative;
     margin-top: 0px !important;
@@ -50,11 +50,11 @@ h1 {
 }
 
 h1>small {
-    font-size: 20px;
+    font-size: 25px;
 }
 
 h2 {
-    font-size: 40px;
+    font-size: 30px;
     margin-top: 25px;
     padding-top: 25px;
     border-top: 1px solid grey;
@@ -191,7 +191,7 @@ code {
     display: inline-block;
     background-color: #e1e0e0;
     font-family: monospace;
-    margin: 1% 0 1% 0;
+    margin: 1% 1% 1% 1%;
     border: 1px solid black;
     padding: 10px;
 }
