--- a/css/blog.css
+++ b/css/blog.css
@@ -139,7 +139,7 @@ img {
     max-width: 75%;
 }
 
-nav {
+/*nav {
     text-align: center;
     font-size: .72em;
     padding: 14px 0;
@@ -164,7 +164,7 @@ nav a:last-child {
     border-bottom: solid #edebeb 2px;
 }
 
-nav a:hover {}
+nav a:hover {}*/
 
 hvr {
     display: inline-block;
@@ -204,3 +204,35 @@ pre {
     right: -15%;
     position: relative;
 }
+
+/* New */
+
+.top_bar {
+    width: 100%;
+    height: 25%;
+    top: 0;
+    left: 0;
+    overflow-y: hidden;
+    background-color: #2A2A2E;
+    text-align: center;
+    margin: 0;
+    color: #edebeb;
+}
+
+nav {
+    text-align: center;
+    font-size: .72em;
+    padding: 14px 0;
+}
+
+nav a {
+    text-decoration: none;
+    color: #edebeb;
+    display: inline;
+    padding: 15px 15px 15px 15px;
+    border-top: solid #edebeb 1px;
+    letter-spacing: 2px;
+    font-size: 16px;
+}
+
+nav a:hover {}
