--- a/css/theme.css
+++ b/css/theme.css
@@ -40,35 +40,11 @@ body {
     margin: 0;
 }
 
-/* Style the top navigation bar */
-.navbar {
-    display: flex;
-    background-color: #333;
-    justify-content: flex-end;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-    color: white;
-    padding: 14px 20px;
-    text-decoration: none;
-    text-align: center;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-/* Column container */
 .row {  
     display: flex;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
 }
 
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
 .about {
     background-color: #f1f1f1;
     padding: 20px;
@@ -78,7 +54,7 @@ body {
 }
 
 .item{
-    width: 30%;
+    width: 100%;
 }
 
 .work {
@@ -131,7 +107,6 @@ a {
     padding: 20px;
 }
 
-
 /* Footer */
 .footer {
     display: flex;
@@ -168,14 +143,22 @@ code {
     border: 1px solid black;
     padding: 0px 2px;
 }
-pre{
-    left: 0;
-}
-
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
-    .row, .navbar {   
+    .row, .header{   
         flex-direction: column;
+    }
+    .header>div{
+	margin: 0.5em;
+	padding: 0.5em;
+    }
+    
+    .header>div>img  {
+       display:none;
+    }
+    .about{
+	flex-direction: column;
+	align-items: center;
     }
 }
