--- a/css/theme.css
+++ b/css/theme.css
@@ -11,85 +11,117 @@ body {
     line-height:1.5;
 }
 
-/* Header/logo Title */
+/* Header */
 .header {
     display: flex;
     flex-direction: row;
-    background-color: #6093ca;
     align-items: center;
-    justify-content: center;
+    width: 100%;
+    position: relative;
+    min-height: 50vh;
+    color: #fff;
 }
-.header > div {
-    padding: 60px;
+
+.header_item {
     color: white;
-    margin: 2em 10px 10px 10px;
-    text-align: left;
+    margin: 1em 10px 10px 10px;
     line-height: 75px;
     font-size: 30px;
+    align-items: center;
 }
-.header > div > h1  {
+
+.header_item > h1  {
     font-size: 6rem;
     font-weight: 300;
     line-height: 1.2;
     margin-top: 0;
     margin-bottom: 0;
 }
-
-.header > div > p{
-    font-size: 1.3rem;
-    margin: 0;
+ 
+.background-image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+.background-image:after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #414a4f;
+    opacity: 0.75;
 }
 
-.row {  
+.row { 
     display: flex;
     flex-flow: row wrap;
 }
 
+.item{
+    width: 100%;
+    flex-direction: row;
+}
+/* Bio  */
+.bio {
+    background-color: #f1f1f1;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.row{
+    width: 100%;
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.avatar_item{
+    width: 250px;
+    margin-right: 50px;
+}
+
+.row_item{
+    width: 75%;
+    display: flex;
+    font-size: 20px;
+}
+
+.col_item{
+    display: flex; 
+    width: 100%;
+    flex-direction: column;
+}
+
+.avatar {
+    border-radius: 100%;
+}
+
+
+/* About  */
 .about {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+}
+
+/* Work */
+
+.work {
     background-color: #f1f1f1;
     padding: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
 }
 
-.item{
-    width: 100%;
-}
-
-.work {
-    background-color: white;
-    padding: 0px;
-    margin:0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.item1 {
-    margin: 0;
-    padding: 20px 0 10px 0;
-    width: 30%;
-}
-
-.item1>h5 {
-    margin: 0;
-    padding: 0;
-}
-
-.title{
-    justify-content: center;
-    align-items: flex-start;
-    padding: 0px;
-    margin-bottom: 0px;
-    
-}
-
-.title>h2 {
-    padding:0px;
-    margin:0;
+.work_item {
+    width: 50%;
 }
 
 li {
@@ -116,6 +148,7 @@ a {
     background: #ddd;
     justify-content: flex-end;
     background-color: #333;
+    flex-grow: 1;
 }
 
 .fa {
@@ -124,15 +157,6 @@ a {
 }
 .fa:hover{
     color: #c0c0c0;
-}
-
-.col{
-    flex-direction: column;
-}
-
-.space {
-    margin: 20px;
-    flex-wrap: wrap;
 }
 
 code {
@@ -153,12 +177,59 @@ code {
 	margin: 0.5em;
 	padding: 0.5em;
     }
-    
-    .header>div>img  {
-       display:none;
-    }
-    .about{
+
+    .about {
 	flex-direction: column;
 	align-items: center;
     }
+
+
+}
+
+/* For blogs */
+.pages_header{
+    display: flex;
+    flex-direction: row;
+    background-color: #6093ca;
+    align-items: center;
+    justify-content: center;
+}
+
+.title{
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 20px;
+}
+
+.col{
+    flex-direction: column;
+}
+
+.space {
+    margin: 20px;
+    flex-wrap: wrap;
+}
+
+.grey {
+    padding: 20px;
+    background-color: #f1f1f1;
+}
+
+.grey>h2{
+    margin: 0;
+}
+
+.grey>p{
+    margin: 0;
+}
+
+.white {
+    padding: 20px;
+}
+.white>p{
+    margin: 0;
+}
+
+.white>h2{
+    margin: 0;
 }
