--- a/css/theme.css
+++ b/css/theme.css
@@ -38,7 +38,7 @@ body {
     margin-top: 0;
     margin-bottom: 0;
 }
- 
+
 .background-image{
     position: absolute;
     top: 0;
@@ -83,11 +83,6 @@ body {
     align-items: center;
 }
 
-.avatar_item{
-    width: 250px;
-    margin-right: 50px;
-}
-
 .row_item{
     width: 75%;
     display: flex;
@@ -102,6 +97,12 @@ body {
 
 .avatar {
     border-radius: 100%;
+    width: 100%;
+
+}
+.avatar_item{
+    max-width: 20%;
+    height: auto;
 }
 
 
@@ -188,10 +189,7 @@ code {
     }
 
     .avatar, .avatar_item {
-	border-radius: 0;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	display: none;
     }
     
     .work {
