--- a/css/theme.css
+++ b/css/theme.css
@@ -8,7 +8,11 @@
 body {
     font-family: Roboto;
     margin: 0;
-    line-height:1.5;
+    line-height: 1.5;
+}
+
+h2 {
+    font-size: 1.6rem;
 }
 
 /* Header */
@@ -86,7 +90,7 @@ body {
 .row_item{
     width: 75%;
     display: flex;
-    font-size: 20px;
+    font-size: 1.3rem;
 }
 
 .col_item{
@@ -101,10 +105,9 @@ body {
 
 }
 .avatar_item{
-    max-width: 20%;
+    max-width: 16.5rem;
     height: auto;
 }
-
 
 /* About  */
 .about {
@@ -128,15 +131,18 @@ body {
     width: 50%;
     padding: 0 10px 0 10px;
     margin: 0 10px 0 10px;
+    text-align: center;
 }
 
 li {
     margin-bottom: 10px;
+    font-size: 1.3rem;
 }
 
 a {
     text-decoration: none;
     color: #3F7BBF;
+    font-size: 1.3rem;
 }
 /* Main column */
 .min {
