--- a/css/theme.css
+++ b/css/theme.css
@@ -27,7 +27,7 @@ h2 {
     min-height: 50vh;
     color: #fff;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
 }
 
 .header_item {
@@ -35,10 +35,9 @@ h2 {
     margin: 1em 10px 10px 10px;
     line-height: 75px;
     font-size: 30px;
-    align-items: center;
+    align-items: left;
     justify-content: center;
-    padding-left: 20%;
-    padding-right: 20%;
+    margin-left: 25%;
 }
 
 .header_h1  {
@@ -47,6 +46,20 @@ h2 {
     line-height: 1.2;
     margin-top: 0;
     margin-bottom: 0;
+    margin-right: 0%;
+}
+
+.header_h1 > span {
+    padding-left: 0%:
+}
+
+.pages_header_item {
+    color: white;
+    padding-left: 20%;
+    padding-right: 20%;
+    line-height: 75px;
+    font-size: 30px;
+    align-items: left;
 }
 
 .background-image{
@@ -135,7 +148,7 @@ h2 {
 
 .work_item {
     width: 50%;
-    padding: 0 10px 0 10px;
+    padding: 10px;
     margin: 0 10px 0 10px;
     text-align: center;
 }
