--- a/css/theme.css
+++ b/css/theme.css
@@ -2,198 +2,22 @@
 
 * {
     box-sizing: border-box;
+    font-weight: 100;
 }
 
-/* Style the body */
+/* Main tags */
 body {
     font-family: Roboto;
-    margin: 0;
-    line-height: 1.5;
+    margin: 0 22.5%;
+    line-height: 2;
 }
-
-p {
-    margin: 20px 0px 20px 0px;
-}
-
-h2 {
-    font-size/: 1.6rem;
-}
-
-/* Header */
-.header {
-    display: flex;
-    width: 100%;
-    position: relative;
-    min-height: 50vh;
-    color: #fff;
-    align-items: center;
-    justify-content: left;
-}
-
-.header_item {
-    color: white;
-    margin: 1em 10px 10px 10px;
-    line-height: 75px;
-    font-size: 30px;
-    align-items: left;
-    justify-content: center;
-    margin-left: 25%;
-}
-
-.header_h1  {
-    font-size: 6rem;
-    font-weight: 300;
-    line-height: 1.2;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-right: 0%;
-}
-
-.header_h1 > span {
-    padding-left: 0%:
-}
-
-.pages_header_item {
-    color: white;
-    padding-left: 20%;
-    padding-right: 20%;
-    line-height: 75px;
-    font-size: 30px;
-    align-items: left;
-}
-
-.background-image{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-.background-image:after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #414a4f;
-    opacity: 0.75;
-}
-
-.row { 
-    display: flex;
-    flex-flow: row wrap;
-}
-
-.item{
-    width: 100%;
-    flex-direction: row;
-}
-/* Bio  */
-.bio {
-    background-color: #f1f1f1;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-.row{
-    width: 100%;
-    display: flex; 
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.row_item{
-    width: 75%;
-    display: flex;
-    font-size: 1.3rem;
-}
-
-.col_item{
-    display: flex; 
-    width: 100%;
-    flex-direction: column;
-}
-
-.avatar {
-    border-radius: 100%;
-    width: 100%;
-
-}
-.avatar_item{
-    max-width: 16.5rem;
-    height: auto;
-}
-
-/* About  */
-.about {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-}
-
-/* Work */
-
-.work {
-    background-color: #f1f1f1;
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    margin: 0 10px 0 10px;
-    padding: 0 10px 0 10px;
-}
-
-.work_item {
-    width: 50%;
-    padding: 10px;
-    margin: 0 10px 0 10px;
-    text-align: center;
-}
-
-.list_image {
-    width: 90%;
-}
-
-
-li {
-    margin-bottom: 10px;
-    font-size: 1rem;
-}
-
 a {
     text-decoration: none;
     color: #3F7BBF;
-    font-size: 1 rem;
-    target: _
-}
-/* Main column */
-.min {
-    flex: 70%;
-    background-color: white;
-    padding: 20px;
 }
 
-/* Footer */
-.footer {
-    display: flex;
-    padding: 20px;
-    text-align: center;
-    flex-direction: row;
-    background: #ddd;
-    justify-content: flex-end;
-    background-color: #333;
-    flex-grow: 1;
-}
-
-.fa {
-    color: white;
-    padding: 0px 10px;
-}
-.fa:hover{
-    color: #c0c0c0;
+h1 {
+    margin: 0;
 }
 
 pre{
@@ -210,7 +34,79 @@ code {
 
 }
 
-/* For mobile */
+/* Custom tags */
+.header {
+    display: flex;
+    width: 100%;
+    min-height: 5vh;
+}
+
+.typed {
+    font-size: 3rem;
+}
+
+.item{
+    width: 100%;
+    flex-direction: row;
+}
+
+/* Footer */
+.footer {
+    display: flex;
+    text-align: center;
+    flex-direction: row;
+    justify-content: flex-end;
+    flex-grow: 1;
+}
+
+.fa {
+    color: black;
+    padding: 15px 10px 0px 10px;
+    bottom: 0;
+}
+.fa:hover{
+    color: #4c4c4c;
+}
+
+.pages_header_item {
+    color: white;
+    padding-left: 20%;
+    padding-right: 20%;
+    line-height: 75px;
+    align-items: left;
+}
+
+.row { 
+    width: 100%;
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.row_item{
+    width: 75%;
+    display: flex;
+}
+
+.col{
+    flex-direction: column;
+}
+
+.col_item{
+    display: flex; 
+    width: 100%;
+    flex-direction: column;
+}
+
+
+.min {
+    flex: 70%;
+    background-color: white;
+    padding: 20px;
+}
+
+/* mobile */
 @media screen and (max-width: 700px) {
     .row, .header{   
         flex-direction: column;
@@ -231,84 +127,11 @@ code {
     .work {
 	flex-direction: column;
     }
-    
-    .work_item {
-	padding-top: 20px;
-	padding-bottom: 20px;
-	width: 100%;
-	flex-direction: column;
-	align-items: center;
-    }
-    
-    .work_item:first-child {
-	padding-top: 0;
-    }
-    
-    .work_item:last-child {
-	padding-bottom: 0;
-    }
 
-    .header_item{
-
-    }
+    .header_item{}
     
     .header_item > h1  {
-	font-size: 4rem;
-	font-weight: 300;
-	line-height: 1.2;
 	margin-top: 0;
 	margin-bottom: 0;
-
     }
 }
-
-/* For blogs */
-.pages_header{
-    display: flex;
-    flex-direction: row;
-    background-color: #6093ca;
-    align-items: center;
-    justify-content: center;
-}
-
-.title{
-    justify-content: center;
-    align-items: flex-start;
-    padding-left: 20%;
-    padding-right: 20%;
-}
-
-.col{
-    flex-direction: column;
-}
-
-.space {
-    margin: 20px;
-    flex-wrap: wrap;
-}
-
-.grey {
-    padding: 20px;
-    background-color: #f1f1f1;
-}
-
-.grey>h2{
-    margin: 0;
-}
-
-.grey>p{
-    margin: 0;
-}
-
-.white {
-    padding: 20px;
-}
-.white>p{
-    margin: 0;
-}
-
-.white>h2{
-    margin: 0;
-}
-
-
