--- a/css/theme.css
+++ b/css/theme.css
@@ -21,11 +21,6 @@ body {
     line-height: 2;
 }
 
-.main {
-    align-items: center;
-    justify-content: center;
-}
-   
 code {
     display: block;
     background-color: #f1f1f1;
@@ -35,19 +30,53 @@ code {
 
 h1 {
     margin: 0;
+    font-weight: bold;
 }
 
-pre{
+.main {
+    align-items: center;
+    justify-content: center;
+}
+
+pre {
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 ul {
-    margin: 0;
+    margin: 0.75em;
     list-style-type: square;
 }
 
 /* Custom tags */
+
+.col{
+    flex-direction: column;
+}
+
+.col_item{
+    display: flex; 
+    width: 100%;
+    flex-direction: column;
+}
+
+.fa {
+    color:  #eaebeb;
+    padding: 10px 10px 0 10px;
+}
+.fa:hover{
+    color: #3aacff;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    flex-grow: 1;
+    border-bottom: 3px solid #eaebeb;
+    margin-bottom: 1em;
+}
+
 .header {
     margin-top: 1rem;
     display: flex;
@@ -57,34 +86,19 @@ ul {
     width: 100%;
 }
 
-.typed {
-    font-size: 2rem;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: flex-end;
-}
-
 .item{
     width: 100%;
     flex-direction: row;
 }
 
-/* Footer */
-.footer {
-    display: flex;
-    align-items: flex;
-    justify-content: flex-end;
-    flex-grow: 1;
+.li_seq {
+    margin: 50px 0;
 }
 
-.fa {
-    color:  #eaebeb;
-    padding-top: 20px;
-    padding-left: 20px;
-}
-.fa:hover{
-    color: #3aacff;
+.min {
+    flex: 70%;
+    background-color: white;
+    padding: 20px;
 }
 
 .pages_header_item {
@@ -102,55 +116,53 @@ ul {
     justify-content: space-evenly;
     align-items: center;
 }
-
+#
 .row_item{
     width: 75%;
     display: flex;
 }
 
-.col{
-    flex-direction: column;
+.topic {
+    border-left: 2px solid #eaebeb;
 }
 
-.col_item{
-    display: flex; 
-    width: 100%;
-    flex-direction: column;
+.topic > h1 {
+    padding-left: 0.9em;
+    font-size: 1.3em;
 }
 
-
-.min {
-    flex: 70%;
-    background-color: white;
-    padding: 20px;
+.typed {
+    font-size: 2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 /* mobile */
 @media screen and (max-width: 700px) {
-    .row, .header{   
-        flex-direction: column;
+
+    * {
+	width: 100%;
     }
 
-    .about, .bio {
-	flex-direction: column;
+    body {
+	margin: 0;
+	padding: 0 7.5%;
+    }
+    
+    .footer {
+	display: flex;
+	justify-content: center;
+	flex-grow: 1;
+    }
+    
+    .row, .header{   
+        flex-direction: column;
     }
 
     .row_item {
 	width: 100%;
     }
-
-    .avatar, .avatar_item {
-	display: none;
-    }
     
-    .work {
-	flex-direction: column;
-    }
-
-    .header_item{}
-    
-    .header_item > h1  {
-	margin-top: 0;
-	margin-bottom: 0;
-    }
 }
